--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ osx_image: xcode10.1
 language: swift
 script: 
     - cd SwiftTopStars
-    - xcodebuild -project SwiftTopStars.xcodeproj -scheme 'SwiftTopStars/SwiftTopStarsTests' clean archive -configuration release -sdk iphoneos -archivePath SwiftTopStars.xcarchive | xcpretty -c | -list
+    - xcodebuild -project SwiftTopStars.xcodeproj -scheme 'SwiftTopStarsTests' clean archive -configuration release -sdk iphoneos -archivePath SwiftTopStars.xcarchive | xcpretty -c 
+    -list
 before_install: 
   - rvm use $RVM_RUBY_VERSION
 
