--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ osx_image: xcode10.3
 language: swift
 script: 
     - cd SwiftTopStars
-    - xcodebuild -project SwiftTopStars.xcodeproj -scheme 'SwiftTopStarsTests' -sdk iphoneos | xcpretty -c 
+    - xcodebuild -project SwiftTopStars.xcodeproj -scheme 'SwiftTopStars' -sdk iphoneos | xcpretty -c 
 before_install: 
   - rvm use $RVM_RUBY_VERSION
 
 install: bundle install --without=documentation --path ../travis_bundle_dir
-after_success: slather
+after_success: slather  
