--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ osx_image: xcode10.3
 language: swift
 script: 
     - cd SwiftTopStars
-    - xcodebuild -project SwiftTopStars.xcodeproj -scheme 'SwiftTopStars' -sdk iphoneos -allowProvisioningUpdates | xcpretty -c 
+    - xcodebuild -project SwiftTopStars.xcodeproj -scheme 'SwiftTopStars' -sdk iphoneos -allowProvisioningUpdates | xcpretty -c
+xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X    
 before_install: 
   - rvm use $RVM_RUBY_VERSION
 
