--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,6 @@ before_install:
   - rvm use $RVM_RUBY_VERSION
 
 install: bundle install --without=documentation --path ../travis_bundle_dir
-after_success: slather  
+after_success: 
+   - slather  
+   - bash <(curl -s https://codecov.io/bash) -f path/to/xml_report/cobertura.xml -X coveragepy -X gcov -X xcode
