--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ script:
 xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X    
 before_install: 
   - rvm use $RVM_RUBY_VERSION
-
+  - gem install slather
 install: bundle install --without=documentation --path ../travis_bundle_dir
 after_success: 
    - slather  
