--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,13 @@ osx_image: xcode10.3
 language: swift
 script: 
     - cd SwiftTopStars
-    - xcodebuild -project SwiftTopStars.xcodeproj -scheme 'SwiftTopStars' -sdk iphonesimulator -allowProvisioningUpdates | xcpretty -c
+    # - xcodebuild -project SwiftTopStars.xcodeproj -scheme 'SwiftTopStars' -sdk iphonesimulator -allowProvisioningUpdates | xcpretty -c
     - fastlane scan -s SwiftTopStars --device "iPhone X" --clean --code_coverage
 xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X    
 before_install: 
   - rvm use $RVM_RUBY_VERSION
   - gem install fastlane -NV
-install: bundle install --without=documentation --path ../travis_bundle_dir
+#install: bundle install --without=documentation --path ../travis_bundle_dir
 after_success: 
 - cd $TRAVIS_BUILD_DIR
 - bash <(curl -s https://codecov.io/bash)
