--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ osx_image: xcode10.3
 language: swift
 script: 
     # - xcodebuild -project SwiftTopStars.xcodeproj -scheme 'SwiftTopStars' -sdk iphonesimulator -allowProvisioningUpdates | xcpretty -c
-    - fastlane scan -s SwiftTopStars --device "iPhone X" --clean --code_coverage
-xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X    
+    - fastlane scan -s SwiftTopStars/SwiftTopStars --device "iPhone X" --clean --code_coverage
+xcode_destination: platform=iOS Simulator,OS=12.1,name=iPhone X    
 before_install: 
   - cd SwiftTopStars
   - rvm use $RVM_RUBY_VERSION
