--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,9 @@
 osx_image: xcode10.3
 language: swift
 script: 
-    # - xcodebuild -project SwiftTopStars.xcodeproj -scheme 'SwiftTopStars' -sdk iphonesimulator -allowProvisioningUpdates | xcpretty -c
-
-    - fastlane scan -s SwiftTopStars --device "iPhone 6" --clean --code_coverage
-
-before_install: 
-  - rvm use $RVM_RUBY_VERSION
-  - gem install fastlane -NV
-  - cd SwiftTopStars
+    
+before_install:  rvm use $RVM_RUBY_VERSION
+install: bundle install --without=documentation --path ../travis_bundle_dir
 after_success: 
-- cd $TRAVIS_BUILD_DIR
-- bash <(curl -s https://codecov.io/bash)
-   
+- slather coverage -s --scheme SwiftTopStars SwiftTopStars/SwiftTopStars.xcodeproj
+- bash <(curl -s https://codecov.io/bash) -f path/to/xml_report/cobertura.xml -X coveragepy -X gcov -X xcode
