--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
+
+
 osx_image: xcode10.3
+language: swift
 script: 
     - cd SwiftTopStars
     - xcodebuild -project SwiftTopStars.xcodeproj -scheme 'SwiftTopStars' -sdk iphonesimulator -allowProvisioningUpdates | xcpretty -c
-before_install:  rvm use $RVM_RUBY_VERSION
+xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X    
+before_install: 
+  - rvm use $RVM_RUBY_VERSION
+  - gem install slather
 install: bundle install --without=documentation --path ../travis_bundle_dir
 after_success: 
-- slather coverage -s --scheme SwiftTopStars SwiftTopStars/SwiftTopStars.xcodeproj
+- slather
 - bash <(curl -s https://codecov.io/bash) -f path/to/xml_report/cobertura.xml -X coveragepy -X gcov -X xcode
