--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ before_install:
   - gem install slather
 install: bundle install --without=documentation --path ../travis_bundle_dir
 after_success: 
-- slather coverage -s --scheme SwiftTopStars SwiftTopStars.xcodeproj
+- slather 
 - bash <(curl -s https://codecov.io/bash) -f path/to/xml_report/cobertura.xml -X coveragepy -X gcov -X xcode
