--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,9 @@ script:
 xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X    
 before_install: 
   - rvm use $RVM_RUBY_VERSION
-  - gem install slather
-install: bundle install --without=documentation --path ../travis_bundle_dir
+install: 
+ - gem install slather
+ - bundle install --without=documentation --path ../travis_bundle_dir
 after_success: 
-- slather 
-- bash <(curl -s https://codecov.io/bash) -f path/to/xml_report/cobertura.xml -X coveragepy -X gcov -X xcode
+ - slather 
+ - bash <(curl -s https://codecov.io/bash) -f path/to/xml_report/cobertura.xml -X coveragepy -X gcov -X xcode
