--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ install:
  - bundle install --without=documentation --path ../travis_bundle_dir
 after_success: 
  - cd ..
- - slather --build-directory build_dir
+ - slather --verbose
  - bash <(curl -s https://codecov.io/bash) -f path/to/xml_report/cobertura.xml -X coveragepy -X gcov -X xcode
