--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: swift
 build_dir: "build"
 script: 
     - cd SwiftTopStars
-    - xcodebuild -project SwiftTopStars.xcodeproj -scheme 'SwiftTopStars' -sdk iphonesimulator -derivedDataPath $build_dir -enableCodeCoverage YES | xcpretty -c
+    - xcodebuild -project SwiftTopStars.xcodeproj -scheme 'SwiftTopStars' -sdk iphonesimulator -derivedDataPath $build_dir -enableCodeCoverage
 xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X    
 before_install: 
   - rvm use $RVM_RUBY_VERSION
@@ -13,5 +13,5 @@ install:
  - gem install slather
  - bundle install --without=documentation --path ../travis_bundle_dir
 after_success: 
- - slather coverage -s --scheme SwiftTopStars --build-directory $BUILD_DIR $XCODE_PROJECT
+ - slather coverage -s --scheme SwiftTopStars --build-directory $build_dir
  - bash <(curl -s https://codecov.io/bash) -f path/to/xml_report/cobertura.xml -X coveragepy -X gcov -X xcode
