--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ install:
  - gem install slather
  - bundle install --without=documentation --path ../travis_bundle_dir
 after_success: 
- - slather coverage -s --scheme SwiftTopStars --build-directory $build_dir
+ - slather coverage -s --project SwiftTopStars.xcodeproj --scheme SwiftTopStars --build-directory $build_dir
  - bash <(curl -s https://codecov.io/bash) -f path/to/xml_report/cobertura.xml -X coveragepy -X gcov -X xcode
