--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@
 
 osx_image: xcode10.3
 language: swift
-build_dir: "build"
+BUILd_DIR: "build"
 script: 
     - cd SwiftTopStars
-    - xcodebuild -project SwiftTopStars.xcodeproj -scheme 'SwiftTopStars' -sdk iphonesimulator -derivedDataPath $build_dir -enableCodeCoverage
+    - xcodebuild -project SwiftTopStars.xcodeproj -scheme 'SwiftTopStars' -sdk iphonesimulator | xcpretty -c
 xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X    
 before_install: 
   - rvm use $RVM_RUBY_VERSION
@@ -13,5 +13,6 @@ install:
  - gem install slather
  - bundle install --without=documentation --path ../travis_bundle_dir
 after_success: 
- - slather coverage -s --project SwiftTopStars.xcodeproj --scheme SwiftTopStars --build-directory $build_dir
+
+ - slather
  - bash <(curl -s https://codecov.io/bash) -f path/to/xml_report/cobertura.xml -X coveragepy -X gcov -X xcode
