--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X
 before_install: 
   - rvm use $RVM_RUBY_VERSION
 install: 
+ - cd SwiftTopStars
  - gem install slather
  - bundle install --without=documentation --path ../travis_bundle_dir
 after_success: 
