--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@
 
 osx_image: xcode10.3
 language: swift
+scheme: 'SwiftTopStars'
+project: SwiftTopStars.xcodeproj
 script: 
 #    - xcodebuild -project SwiftTopStars.xcodeproj -scheme 'SwiftTopStars' -sdk iphonesimulator | xcpretty -c
 # xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X    
