--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@
 osx_image: xcode10.3
 language: swift
 scheme: 'SwiftTopStars'
-project: SwiftTopStars.xcodeproj
+project: 'SwiftTopStars.xcodeproj'
+xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X
 script: 
-#    - xcodebuild -project SwiftTopStars.xcodeproj -scheme 'SwiftTopStars' -sdk iphonesimulator | xcpretty -c
-# xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X    
+ - xcodebuild -project project -scheme scheme -sdk iphonesimulator | xcpretty -c   
 before_install: 
   - rvm use $RVM_RUBY_VERSION
 install: 
