--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ scheme: 'SwiftTopStars'
 project: 'SwiftTopStars.xcodeproj'
 xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X
 script: 
- - xcodebuild -project project -scheme scheme -sdk iphonesimulator | xcpretty -c   
+# - xcodebuild -project project -scheme scheme -sdk iphonesimulator | xcpretty -c   
 before_install: 
   - rvm use $RVM_RUBY_VERSION
 install: 
@@ -14,5 +14,6 @@ install:
 # - gem install slather
  - bundle install --without=documentation --path ../travis_bundle_dir
 after_success: 
+ - cd ..
  - slather
  - bash <(curl -s https://codecov.io/bash) -f path/to/xml_report/cobertura.xml -X coveragepy -X gcov -X xcode
