--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@
 
 osx_image: xcode10.3
 language: swift
-scheme: 'SwiftTopStars'
-project: 'SwiftTopStars.xcodeproj'
+xcode_scheme: 'SwiftTopStars'
+xcode_project: 'SwiftTopStars.xcodeproj'
 xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X
 script: 
 # - xcodebuild -project project -scheme scheme -sdk iphonesimulator | xcpretty -c   
