--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,13 @@
 osx_image: xcode10.3
 language: swift
 xcode_scheme: 'SwiftTopStars'
-xcode_project: 'SwiftTopStars.xcodeproj'
+xcode_project: 'SwiftTopStars/SwiftTopStars.xcodeproj'
 xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X
 script: 
 # - xcodebuild -project project -scheme scheme -sdk iphonesimulator | xcpretty -c   
 before_install: 
   - rvm use $RVM_RUBY_VERSION
 install: 
-#  - cd SwiftTopStars
 # - gem install slather
  - bundle install --without=documentation --path ../travis_bundle_dir
 after_success: 
