--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
 before_install: 
   - rvm use $RVM_RUBY_VERSION
 install: 
-# - gem install slather
+ - gem install slather
  - bundle install --without=documentation --path ../travis_bundle_dir
 after_success: 
  - cd ..
