--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ install:
  # - stage: build
  # - bundle install --without=documentation --path ../travis_bundle_dir
 
- - xcodebuild clean -SwiftTopStars  scheme SwiftTopStars/SwiftTopStars.xcodeproj -quiet
- - xcodebuild test -scheme SwiftTopStars  scheme SwiftTopStars/SwiftTopStars.xcodeproj -destination 'platform=iOS Simulator,OS=12.1,name=iPhone X' -enableCodeCoverage YES -quiet
+ - xcodebuild clean -SwiftTopStars  scheme SwiftTopStars/SwiftTopStars.xcodeproj 
+ - xcodebuild test -scheme SwiftTopStars  scheme SwiftTopStars/SwiftTopStars.xcodeproj -destination 'platform=iOS Simulator,OS=12.1,name=iPhone X' -enableCodeCoverage YES
 
 after_success: 
  - slather coverage -s
