--- a/.travis.yml
+++ b/.travis.yml
@@ -2,21 +2,16 @@
 
 osx_image: xcode10.1
 language: swift
-# xcode_scheme: 'SwiftTopStars'
-# xcode_project: 'SwiftTopStars/SwiftTopStars.xcodeproj'
-# xcode_destination: platform=iOS Simulator,OS=12.1,name=iPhone X
-# enableCodeCoverage: YES
+xcode_scheme: 'SwiftTopStars'
+xcode_project: 'SwiftTopStars/SwiftTopStars.xcodeproj'
+xcode_destination: platform=iOS Simulator,OS=12.1,name=iPhone X
+enableCodeCoverage: YES
 before_install: 
   - rvm use $RVM_RUBY_VERSION
 install: 
  - gem install slather 
- # - stage: build
- # - bundle install --without=documentation --path ../travis_bundle_dir
-
-Script:
-- cd SwiftTopStars
- - xcodebuild clean -scheme SwiftTopStars SwiftTopStars.xcodeproj 
- - xcodebuild test -scheme SwiftTopStars SwiftTopStars.xcodeproj -destination 'platform=iOS Simulator,OS=12.1,name=iPhone X' -enableCodeCoverage YES
+ - stage: build
+ - bundle install --without=documentation --path ../travis_bundle_dir
 after_success: 
  - slather coverage -s
  - bash <(curl -s https://codecov.io/bash) -f path/to/xml_report/cobertura.xml -X coveragepy -X gcov -X xcode
